tests/fixtures/negative/coroutines/SharedFlowWithoutReplay.kt
package test

import kotlinx.coroutines.flow.MutableSharedFlow

class EventBus {
    private val events = MutableSharedFlow<String>(extraBufferCapacity = 1)
}
